@@ -1,3 +1,9 @@
+2002-04-29  James Tanis  <jtt@winwood.sysdetect.com>
+
+	* lib/b_ioh.c: Revert "fix" made recently to allow ioh_close's
+	on full queues to succeed. Replace with real fix (which is to
+	bypass queue full check on commands).
+
 2002-04-26  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* include/libbk_oscompat.h: map O_SYNC->O_FSYNC, O_NONBLOCK->O_NDELAY
